fix(styles): updated table row spacing and header line color for better UI

--- a/src/app/components/ApplicationsTable/ApplicationsTable.module.css
+++ b/src/app/components/ApplicationsTable/ApplicationsTable.module.css
@@ -8,7 +8,7 @@
 .table {
   border-collapse: collapse;
   text-align: left;
-  margin-bottom: 20px;
+  width: 95%;
 }
 
 .table th {
